ags (4.5.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_pad_reset_flags()
	* fixed ags_complex_get() return value
	* fixed ags_complex_get_term() and ags_complex_set_term() gtk-doc function
	* fixed ags_vst3_manager_load_file() w32 related plugin_so handle broken reference
	* fixed ags_vst3_manager.c missing usage of G_DIR_SEPARATOR

ags (4.5.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsDial to emit changed signal
	* updated listing effects_recall_container.c.in in developer doc

ags (4.5.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Makefile.am set LIBAGS_VST3_LIBDIR and LIBAGS_VST3_LIBS only conditionally

ags (4.5.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added check LIBAGS_VST3_LIBDIR and LIBAGS_VST3_LIBS environment before set in configure.ac
	* improved configure.ac and Makefile.am GSEQUENCER_CFLAGS, MIDI2XML_CFLAGS, MIDI2XML_CXXFLAGS and MIDI2XML_LDFLAGS
	* modified -std=gnu++2a for gsequencer and midi2xml
	* fixed ags_composite_editor.c wrong object cast with AgsAutomationEdit

ags (4.5.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* modified ags_vst_types.h AgsVstSpeakerArrangement typedef
	* removed updatehandler.h and updatehandler.cpp
	* fixed type safety with recent clang
	* added ags_pad_test_flags(), ags_pad_set_flags() and ags_pad_unset_flags()
	* added ags_line_test_flags(), ags_line_set_flags() and ags_line_unset_flags()
	* added ags_effect_pad_test_flags(), ags_effect_pad_set_flags() and ags_effect_pad_unset_flags()
	* added ags_effect_line_test_flags(), ags_effect_line_set_flags() and ags_effect_line_unset_flags()
	* added ags_connection_editor_test_flags(), ags_connection_editor_set_flags() and ags_connection_editor_unset_flags()
	* refactored AgsExportWindow with AGS_EXPORT_WINDOW_HAS_STOP_TIMEOUT
	* fixed ags_ladspa_plugin_preferences_alloc() prototype declaration